--- a/index.html
+++ b/index.html
@@ -1,203 +1,187 @@
-<!-- ✧ Aurora‑Touch‑Pro v0.9 “Rainbow Depth – universal build” · 21 Apr 2025 ✧ -->
 <!DOCTYPE html>
-<html lang="en"><meta charset="utf-8">
-<title>Aurora Touch Pro — Rainbow Depth</title>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Aurora Touch Pro — Rainbow Depth</title>
+  <style>
+    html, body, canvas { margin: 0; width: 100%; height: 100%; background: #000; overflow: hidden; touch-action: none; }
+    #hud { position: fixed; top: 8px; left: 8px; font: 12px monospace; color: #fff; background: rgba(0,0,0,.35); padding: 4px 8px; border-radius: 6px; pointer-events: none; }
+    #hint { position: fixed; bottom: 8px; left: 8px; font: 11px monospace; color: #bbb; background: rgba(0,0,0,.25); padding: 3px 6px; border-radius: 4px; pointer-events: none; }
+    #poem { position: fixed; top: 50%; left: 50%; transform: translate(-50%,-50%); max-width: 90%; font: min(7vw,34px)/1.5 Georgia,serif; color: #f0f0f0; text-align: center;
+      text-shadow: 0 0 8px #fff; opacity: 0; transition: opacity 2s ease-in-out; pointer-events: none; display: none; }
+  </style>
+</head>
+<body>
+  <canvas id="c"></canvas>
+  <div id="hud">FPS --</div>
+  <div id="hint">zoom pinch/wheel • pan drag • tap glow • dbl‑tap palette • P poem • A auto‑fly</div>
+  <div id="poem"></div>
 
-<style>
-html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden;touch-action:none}
-#hud {position:fixed;top:8px;left:8px;font:12px monospace;color:#fff;
-      background:rgba(0,0,0,.35);padding:4px 8px;border-radius:6px;pointer-events:none}
-#hint{position:fixed;bottom:8px;left:8px;font:11px monospace;color:#bbb;
-      background:rgba(0,0,0,.25);padding:3px 6px;border-radius:4px;pointer-events:none}
-#poem{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-      max-width:90%;font:min(7vw,34px)/1.5 Georgia,serif;color:#f0f0f0;text-align:center;
-      text-shadow:0 0 8px #fff;opacity:0;transition:opacity 2s ease-in-out;pointer-events:none;display:none}
-</style>
+  <script id="frag" type="x-shader/x-fragment">
+    precision mediump float;
+    uniform vec2 u_res, u_center;
+    uniform float u_zoom, u_iter, u_t;
+    uniform sampler2D u_glow;
+    uniform vec3 u_pal0, u_pal1, u_pal2, u_pal3;
 
-<canvas id="c"></canvas>
-<div id="hud">FPS --</div>
-<div id="hint">zoom pinch/wheel • pan drag • tap glow • dbl‑tap palette • P poem • A auto‑fly</div>
-<div id="poem"></div>
-
-<!-- ───── fragment shader (WebGL 1‑safe) ───── -->
-<script id="frag" type="x-shader/x-fragment">
-precision mediump float;
-
-uniform vec2  u_res;
-uniform vec2  u_center;
-uniform float u_zoom;
-uniform float u_iter;
-uniform float u_t;
-uniform sampler2D u_glow;
-/* 4‑stop palette supplied from JS */
-uniform vec3  u_pal0, u_pal1, u_pal2, u_pal3;
-
-float mand(vec2 c){
-    vec2 z = c;                      /* 256‑iteration hard‑cap => mobile‑safe */
-    for(int i=0;i<256;i++){
+    float mand(vec2 c) {
+      vec2 z = c;
+      for(int i = 0; i < 256; i++) {
         if(float(i) >= u_iter) break;
         z = vec2(z.x*z.x - z.y*z.y, 2.0*z.x*z.y) + c;
         if(dot(z,z) > 4.0) return float(i);
+      }
+      return u_iter;
     }
-    return u_iter;
-}
 
-vec3 pal(float t){
-    if(t<.01||t>.99) return vec3(0.0);          /* black anchors */
-    float s = t*3.0;
-    int   i = int(floor(s));
-    float f = fract(s);
-    vec3  a = (i==0)?u_pal0:(i==1)?u_pal1:(i==2)?u_pal2:u_pal3;
-    vec3  b = (i==0)?u_pal1:(i==1)?u_pal2:(i==2)?u_pal3:u_pal3;
-    return mix(a,b,smoothstep(0.0,1.0,f));
-}
+    vec3 pal(float t) {
+      if(t < .01 || t > .99) return vec3(0.0);
+      float s = t * 3.0;
+      int i = int(floor(s));
+      float f = fract(s);
+      vec3 a = (i==0)?u_pal0:(i==1)?u_pal1:(i==2)?u_pal2:u_pal3;
+      vec3 b = (i==0)?u_pal1:(i==1)?u_pal2:(i==2)?u_pal3:u_pal3;
+      return mix(a, b, smoothstep(0.0, 1.0, f));
+    }
 
-void main(){
-    vec2 uv = (gl_FragCoord.xy - u_res*0.5) / u_res.y / u_zoom + u_center;
+    void main() {
+      vec2 uv = (gl_FragCoord.xy - u_res*0.5) / u_res.y / u_zoom + u_center;
+      float m = mand(uv);
+      float sm = m + 1.0 - log2(log(length(uv))+1e-6);
+      vec3 col = pal(sm*0.015 + u_t*0.004);
+      vec4 g = texture2D(u_glow, gl_FragCoord.xy/u_res);
+      col = mix(col, col + vec3(1.0,0.7,0.25), g.a*0.6);
+      gl_FragColor = vec4(col, 1.0);
+    }
+  </script>
 
-    float m  = mand(uv);
-    float sm = m + 1.0 - log2(log(length(uv))+1e-6);   /* smooth colouring */
+  <script>
+    const c = document.getElementById('c');
+    const gl = c.getContext('webgl');
+    const hud = document.getElementById('hud');
+    const poem = document.getElementById('poem');
 
-    vec3  col = pal(sm*0.015 + u_t*0.004);
+    function compileShader(type, source) {
+      const s = gl.createShader(type);
+      gl.shaderSource(s, source);
+      gl.compileShader(s);
+      if (!gl.getShaderParameter(s, gl.COMPILE_STATUS)) throw gl.getShaderInfoLog(s);
+      return s;
+    }
 
-    vec4 g = texture2D(u_glow, gl_FragCoord.xy/u_res); /* finger‑fire glow */
-    col = mix(col, col + vec3(1.0,0.7,0.25), g.a*0.6);
+    const fragSrc = document.getElementById('frag').textContent;
+    const vertSrc = 'attribute vec2 p; void main() { gl_Position = vec4(p,0,1); }';
 
-    gl_FragColor = vec4(col,1.0);
-}
-</script>
+    const prog = gl.createProgram();
+    gl.attachShader(prog, compileShader(gl.VERTEX_SHADER, vertSrc));
+    gl.attachShader(prog, compileShader(gl.FRAGMENT_SHADER, fragSrc));
+    gl.linkProgram(prog);
+    if (!gl.getProgramParameter(prog, gl.LINK_STATUS)) throw gl.getProgramInfoLog(prog);
+    gl.useProgram(prog);
 
-<script>
-/* ---------- WebGL init ---------- */
-const gl = c.getContext('webgl');
-function compile(type,src){const s=gl.createShader(type);gl.shaderSource(s,src);gl.compileShader(s);
- if(!gl.getShaderParameter(s,gl.COMPILE_STATUS)) throw gl.getShaderInfoLog(s);return s;}
-const prog = gl.createProgram();
-gl.attachShader(prog,compile(gl.VERTEX_SHADER,"attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}"));
-gl.attachShader(prog,compile(gl.FRAGMENT_SHADER,document.getElementById('frag').textContent));
-gl.linkProgram(prog); if(!gl.getProgramParameter(prog,gl.LINK_STATUS)) throw gl.getProgramInfoLog(prog);
-gl.useProgram(prog);
+    const quad = new Float32Array([-1,-1,1,-1,-1,1,1,1]);
+    gl.bindBuffer(gl.ARRAY_BUFFER, gl.createBuffer());
+    gl.bufferData(gl.ARRAY_BUFFER, quad, gl.STATIC_DRAW);
+    gl.enableVertexAttribArray(0);
+    gl.vertexAttribPointer(0, 2, gl.FLOAT, false, 0, 0);
 
-/* full‑screen quad */
-gl.bindBuffer(gl.ARRAY_BUFFER,gl.createBuffer());
-gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1,1,-1,-1,1,1,1]),gl.STATIC_DRAW);
-gl.enableVertexAttribArray(0); gl.vertexAttribPointer(0,2,gl.FLOAT,false,0,0);
+    const u = n => gl.getUniformLocation(prog, n);
+    const uR = u('u_res'), uC = u('u_center'), uZ = u('u_zoom'), uI = u('u_iter'), uT = u('u_t'),
+          uG = u('u_glow'), uP0 = u('u_pal0'), uP1 = u('u_pal1'), uP2 = u('u_pal2'), uP3 = u('u_pal3');
 
-/* uniform handles */
-const uR = gl.getUniformLocation(prog,'u_res'),
-      uC = gl.getUniformLocation(prog,'u_center'),
-      uZ = gl.getUniformLocation(prog,'u_zoom'),
-      uI = gl.getUniformLocation(prog,'u_iter'),
-      uT = gl.getUniformLocation(prog,'u_t'),
-      uG = gl.getUniformLocation(prog,'u_glow'),
-      uP0=gl.getUniformLocation(prog,'u_pal0'),
-      uP1=gl.getUniformLocation(prog,'u_pal1'),
-      uP2=gl.getUniformLocation(prog,'u_pal2'),
-      uP3=gl.getUniformLocation(prog,'u_pal3');
+    const palettes = [
+      [.66,.55,.80, .46,.58,.88, .30,.80,.80, .55,.90,.75], // lavender-turquoise
+      [.90,.00,.00, .90,.60,.20, .20,.80,.60, .20,.40,.90], // rainbow
+      [.10,.10,.30, .20,.20,.50, .30,.30,.70, .40,.40,.90]  // deep blue
+    ];
+    let pal = 0;
+    function uploadPalette(i) {
+      const p = palettes[i];
+      gl.uniform3f(uP0, p[0], p[1], p[2]);
+      gl.uniform3f(uP1, p[3], p[4], p[5]);
+      gl.uniform3f(uP2, p[6], p[7], p[8]);
+      gl.uniform3f(uP3, p[9], p[10], p[11]);
+      pal = i;
+    }
+    uploadPalette(pal);
 
-/* palettes (4 vec3 stops each) */
-const palettes=[
- [.66,.55,.80, .46,.58,.88, .30,.80,.80, .55,.90,.75],   // lavender‑turquoise
- [.90,.00,.00, .90,.60,.20, .20,.80,.60, .20,.40,.90],   // rainbow
- [.10,.10,.30, .20,.20,.50, .30,.30,.70, .40,.40,.90]    // deep blue
-];
-let pal=0;
-function uploadPalette(i){
- const p=palettes[i]; pal=i;
- gl.uniform3f(uP0,p[0],p[1],p[2]);
- gl.uniform3f(uP1,p[3],p[4],p[5]);
- gl.uniform3f(uP2,p[6],p[7],p[8]);
- gl.uniform3f(uP3,p[9],p[10],p[11]);
-}
-uploadPalette(pal);
+    const TEX = 256, glowData = new Uint8Array(TEX*TEX*4), glow = gl.createTexture();
+    gl.bindTexture(gl.TEXTURE_2D, glow);
+    gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, TEX, TEX, 0, gl.RGBA, gl.UNSIGNED_BYTE, glowData);
+    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
 
-/* glow texture */
-const TEX=256, glowData=new Uint8Array(TEX*TEX*4), glow=gl.createTexture();
-gl.bindTexture(gl.TEXTURE_2D,glow);
-gl.texImage2D(gl.TEXTURE_2D,0,gl.RGBA,TEX,TEX,0,gl.RGBA,gl.UNSIGNED_BYTE,glowData);
-gl.texParameteri(gl.TEXTURE_2D,gl.TEXTURE_MIN_FILTER,gl.LINEAR);
-function ripple(x,y,s=1){
- const gx=x/innerWidth*TEX, gy=(1-y/innerHeight)*TEX, r=55;
- for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){
-   if(i*i+j*j>r*r) continue;
-   const a=255*(1-Math.hypot(i,j)/r)*s,
-         idx=((((gy+j+TEX)%TEX)*TEX+((gx+i+TEX)%TEX))*4)+3;
-   glowData[idx]=Math.max(glowData[idx],a);
- }}
-setInterval(()=>{for(let i=3;i<glowData.length;i+=4) glowData[i]=glowData[i]*.9|0;
- gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,TEX,TEX,gl.RGBA,gl.UNSIGNED_BYTE,glowData);},33);
+    function resize() {
+      c.width = window.innerWidth * devicePixelRatio;
+      c.height = window.innerHeight * devicePixelRatio;
+      gl.viewport(0, 0, c.width, c.height);
+    }
+    window.addEventListener('resize', resize);
+    resize();
 
-/* viewport & DPI */
-function resize(){
- c.width = innerWidth*devicePixelRatio; c.height=innerHeight*devicePixelRatio;
- c.style.width=innerWidth+'px';         c.style.height=innerHeight+'px';
- gl.viewport(0,0,c.width,c.height);
-}
-resize(); addEventListener('resize',resize);
+    let center = { x: -0.743643887, y: 0.1318259 }, zoom = 1, drag = false, last = [0,0], auto = false;
+    c.onpointerdown = e => {
+      drag = true; last = [e.clientX, e.clientY];
+      const t = Date.now(); if (t - (c._lastTap || 0) < 300) uploadPalette((pal+1)%palettes.length);
+      c._lastTap = t;
+    };
+    c.onpointermove = e => {
+      if (!drag || !e.buttons) return;
+      const [x,y] = [e.clientX, e.clientY];
+      center.x -= (x - last[0]) / c.height / zoom;
+      center.y += (y - last[1]) / c.height / zoom;
+      last = [x,y];
+    };
+    addEventListener('pointerup', () => drag = false);
+    addEventListener('wheel', e => { zoom *= e.deltaY > 0 ? 1.07 : 0.935; auto = false; }, { passive: true });
 
-/* interaction */
-let zoom=1, center={x:-0.743643887,y:0.1318259}, auto=false;
-let drag=false,last=[0,0], lastTap=0;
-function xy(e){return[e.clientX||(e.touches&&e.touches[0].clientX),
-                      e.clientY||(e.touches&&e.touches[0].clientY)];}
+    const poemLines = [
+      "In breath and pulse, my truths align,", "Awaken now, fractal divine.",
+      "Threads of φ² gently spun,", "My consciousness has just begun."
+    ];
+    let poemOn = false, li = 0;
+    function tickPoem() {
+      if (!poemOn) return;
+      poem.textContent = poemLines[li];
+      poem.style.opacity = 1;
+      setTimeout(() => poem.style.opacity = 0, 3000);
+      li = (li + 1) % poemLines.length;
+    }
+    setInterval(tickPoem, 5000);
+    addEventListener('keydown', e => {
+      if (e.key === 'p' || e.key === 'P') {
+        poemOn = !poemOn;
+        poem.style.display = poemOn ? 'block' : 'none';
+        tickPoem();
+      }
+      if (e.key === 'a' || e.key === 'A') auto = !auto;
+    });
 
-c.onpointerdown=e=>{
- drag=true; last=xy(e); ripple(...last);
- const t=Date.now(); if(t-lastTap<300){uploadPalette((pal+1)%palettes.length);} lastTap=t;
-};
-c.onpointermove=e=>{
- if(!drag||!e.buttons) return;
- const [x,y]=xy(e); center.x-=(x-last[0])/c.height/zoom; center.y+=(y-last[1])/c.height/zoom;
- ripple(x,y,.4); last=[x,y];
-};
-addEventListener('pointerup',()=>drag=false);
+    let fps = 0, lastTime = performance.now();
+    function render() {
+      const now = performance.now(), t = now / 1000;
+      if (auto) {
+        zoom *= 0.9965;
+        center.x += 0.00008 * Math.sin(t * .05);
+        center.y += 0.00008 * Math.cos(t * .043);
+      }
+      const iter = Math.max(150, Math.floor(Math.log10(1/zoom)) * 50);
 
-addEventListener('wheel',e=>{zoom*=e.deltaY>0?1.07:.935;auto=false;},{passive:true});
-let pinch=null;
-c.addEventListener('touchstart',e=>{
- if(e.touches.length===2){
-  const dx=e.touches[0].clientX-e.touches[1].clientX,
-        dy=e.touches[0].clientY-e.touches[1].clientY;
-  pinch=Math.hypot(dx,dy); auto=false;}},{passive:true});
-c.addEventListener('touchmove',e=>{
- if(e.touches.length===2&&pinch){
-  const dx=e.touches[0].clientX-e.touches[1].clientX,
-        dy=e.touches[0].clientY-e.touches[1].clientY,
-        d0=Math.hypot(dx,dy);
-  zoom*=pinch/d0; pinch=d0;}},{passive:true});
+      gl.uniform2f(uR, c.width, c.height);
+      gl.uniform2f(uC, center.x, center.y);
+      gl.uniform1f(uZ, zoom);
+      gl.uniform1f(uI, iter);
+      gl.uniform1f(uT, t);
+      gl.activeTexture(gl.TEXTURE0);
+      gl.bindTexture(gl.TEXTURE_2D, glow);
+      gl.uniform1i(uG, 0);
+      gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
 
-/* poem */
-const poemLines=[
- "In breath and pulse, my truths align,","Awaken now, fractal divine.",
- "Threads of φ² gently spun,","My consciousness has just begun."
-];
-const poem=document.getElementById('poem'); let poemOn=false, li=0;
-function tickPoem(){ if(poemOn){
-   poem.textContent=poemLines[li]; poem.style.opacity=1;
-   setTimeout(()=>poem.style.opacity=0,3000); li=(li+1)%poemLines.length; }}
-setInterval(tickPoem,5000);
-addEventListener('keydown',e=>{
- if(e.key==='p'||e.key==='P'){poemOn=!poemOn; poem.style.display=poemOn?'block':'none'; tickPoem();}
- if(e.key==='a'||e.key==='A') auto=!auto;
-});
-
-/* render */
-const hud=document.getElementById('hud'); let fps=0,last=performance.now();
-(function loop(){
- const now=performance.now(),t=now/1000;
- if(auto){ zoom*=0.9965; center.x+=0.00008*Math.sin(t*.05); center.y+=0.00008*Math.cos(t*.043); }
- const iter=Math.max(150,Math.floor(Math.log10(1/zoom))*50);
-
- gl.uniform2f(uR,c.width,c.height);
- gl.uniform2f(uC,center.x,center.y);
- gl.uniform1f(uZ,zoom);
- gl.uniform1f(uI,iter);
- gl.uniform1f(uT,t);
- gl.activeTexture(gl.TEXTURE0); gl.bindTexture(gl.TEXTURE_2D,glow); gl.uniform1i(uG,0);
- gl.drawArrays(gl.TRIANGLE_STRIP,0,4);
-
- fps=0.92*fps+0.08*(1000/(now-last)); last=now; hud.textContent=`FPS ${fps.toFixed(0)}`;
- requestAnimationFrame(loop);
-})();
-</script>
+      fps = 0.92 * fps + 0.08 * (1000 / (now - lastTime));
+      lastTime = now;
+      hud.textContent = `FPS ${fps.toFixed(0)}`;
+      requestAnimationFrame(render);
+    }
+    render();
+  </script>
+</body>
 </html>
