--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!-- ✧ Aurora‑Touch‑Pro v0.9 “Rainbow Depth” • 2025‑04‑22 ✧ -->
+<!-- ✧ Aurora‑Touch‑Pro · Golden Build v1.0 · 2025‑04‑21 ✧ -->
 <!DOCTYPE html><html lang="en"><meta charset="utf-8">
-<title>Aurora Touch Pro – Rainbow Depth</title>
+<title>Aurora Touch Pro — Rainbow Depth (gold)</title>
 <style>
 html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden;touch-action:none}
 #hud {position:fixed;top:8px;left:8px;font:12px monospace;color:#fff;
@@ -8,56 +8,61 @@ html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden
 #hint{position:fixed;bottom:8px;left:8px;font:11px monospace;color:#bbb;
       background:rgba(0,0,0,.25);padding:3px 6px;border-radius:4px;pointer-events:none}
 #poem{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);max-width:90%;
-      font:min(7vw,34px)/1.5 Georgia,serif;color:#f0f0f0;text-align:center;text-shadow:0 0 8px #fff;
-      opacity:0;transition:opacity 2s ease-in-out;pointer-events:none;display:none}
+      font:min(7vw,34px)/1.5 Georgia,serif;color:#f0f0f0;text-align:center;
+      text-shadow:0 0 8px #fff;opacity:0;transition:opacity 2s ease-in-out;pointer-events:none;display:none}
 </style>
+
 <canvas id="c"></canvas>
 <div id="hud">FPS --</div>
-<div id="hint">zoom pinch/wheel • pan drag • tap glow • dbl‑tap palette • P poem • A auto‑fly</div>
+<div id="hint">zoom pinch/wheel • pan drag • tap glow • dbl‑tap palette • P poem • A auto‑fly</div>
 <div id="poem"></div>
 
-<!-- ——— fragment shader ——— -->
 <script id="frag" type="x-shader/x-fragment">
 precision mediump float;
 uniform vec2  u_res, u_center;
 uniform float u_zoom, u_iter, u_t;
 uniform sampler2D u_glow;
-uniform vec3 u_pal0,u_pal1,u_pal2,u_pal3;
+uniform vec3  u_pal0,u_pal1,u_pal2,u_pal3;
 
 float mand(vec2 c){
-  vec2 z=c;
+  vec2 z=c;               // classic Mandelbrot
   for(int i=0;i<1200;i++){
     if(float(i)>=u_iter) break;
-    z=vec2(z.x*z.x-z.y*z.y,2.0*z.x*z.y)+c;
-    if(dot(z,z)>4.) return float(i);
+    z = vec2(z.x*z.x - z.y*z.y, 2.0*z.x*z.y) + c;
+    if(dot(z,z)>4.0) return float(i);
   }
   return u_iter;
 }
-vec3 pick(int i){ return (i==0)?u_pal0:(i==1)?u_pal1:(i==2)?u_pal2:u_pal3; }
+vec3 pick(int i){return i==0?u_pal0:i==1?u_pal1:i==2?u_pal2:u_pal3;}
 vec3 palette(float t){
-  if (t < .005) return vec3(0.);if (t > .90) return vec3(0.);
-
-  float s=pow(t,0.82)*3.0; int i=int(floor(s)); float f=fract(s);
+  if(t<.01||t>.99) return vec3(0.0);          // crisp blacks
+  float s=t*3.0; int i=int(floor(s)); float f=fract(s);
   return mix(pick(i),pick(i+1),smoothstep(0.,1.,f));
 }
 void main(){
-  vec2 uv=(gl_FragCoord.xy-u_res*.5)/u_res.y/u_zoom+u_center;
+  vec2 uv=(gl_FragCoord.xy-u_res*.5)/u_res.y/u_zoom + u_center;
   float m=mand(uv);
-  float sm=m+1.-log2(log(length(uv))+1e-6);
-  vec3 col=palette(sm*.030 + u_t*.004);
+  float sm=m+1.0-log2(log(length(uv))+1e-6);   // smooth
+  vec3 col=palette(sm*.015 + u_t*.004);
+
   vec4 g=texture2D(u_glow,gl_FragCoord.xy/u_res);
-  col=mix(col,col+vec3(1.,.7,.25),g.a*.6);
-  gl_FragColor=vec4(col,1);
+  col=mix(col,col+vec3(1.0,.7,.25),g.a*.6);    // finger‑fire
+  gl_FragColor=vec4(col,1.0);
 }
 </script>
 
 <script>
-const c=document.getElementById('c'),gl=c.getContext('webgl');
-/* compile program */
-const vs="attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}";
-function sh(t,s){const z=gl.createShader(t);gl.shaderSource(z,s);gl.compileShader(z);if(!gl.getShaderParameter(z,gl.COMPILE_STATUS))throw gl.getShaderInfoLog(z);return z;}
-const pr=gl.createProgram();gl.attachShader(pr,sh(gl.VERTEX_SHADER,vs));gl.attachShader(pr,sh(gl.FRAGMENT_SHADER,frag.textContent));
-gl.linkProgram(pr);if(!gl.getProgramParameter(pr,gl.LINK_STATUS))throw gl.getProgramInfoLog(pr);gl.useProgram(pr);
+/* ========== GL setup ========= */
+const gl = c.getContext('webgl');
+function compile(t,s){const sh=gl.createShader(t);gl.shaderSource(sh,s);gl.compileShader(sh);
+ if(!gl.getShaderParameter(sh,gl.COMPILE_STATUS)) throw gl.getShaderInfoLog(sh);return sh;}
+const vs='attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}';
+const fs=document.getElementById('frag').textContent;
+const pr=gl.createProgram();
+gl.attachShader(pr,compile(gl.VERTEX_SHADER,vs));
+gl.attachShader(pr,compile(gl.FRAGMENT_SHADER,fs));
+gl.linkProgram(pr); if(!gl.getProgramParameter(pr,gl.LINK_STATUS)) throw gl.getProgramInfoLog(pr);
+gl.useProgram(pr);
 /* quad */
 gl.bindBuffer(gl.ARRAY_BUFFER,gl.createBuffer());
 gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1,1,-1,-1,1,1,1]),gl.STATIC_DRAW);
@@ -66,47 +71,54 @@ gl.enableVertexAttribArray(0);gl.vertexAttribPointer(0,2,gl.FLOAT,false,0,0);
 const U=n=>gl.getUniformLocation(pr,n);
 const uR=U('u_res'),uC=U('u_center'),uZ=U('u_zoom'),uI=U('u_iter'),uT=U('u_t'),uG=U('u_glow'),
       uP0=U('u_pal0'),uP1=U('u_pal1'),uP2=U('u_pal2'),uP3=U('u_pal3');
+/* palettes */
 const palettes=[
- [.66,.55,.80, .46,.58,.88, .30,.80,.80, .55,.90,.75],
- [.90,.00,.00, .90,.60,.20, .20,.80,.60, .20,.40,.90],
- [.10,.10,.30, .20,.20,.50, .30,.30,.70, .40,.40,.90]];
-let pal=0;function setPal(i){const p=palettes[i];gl.uniform3f(uP0,p[0],p[1],p[2]);
- gl.uniform3f(uP1,p[3],p[4],p[5]);gl.uniform3f(uP2,p[6],p[7],p[8]);gl.uniform3f(uP3,p[9],p[10],p[11]);pal=i;}
-setPal(pal);
-/* glow tex */
+ [.66,.55,.80, .46,.58,.88, .30,.80,.80, .55,.90,.75],   // lavender‑turquoise
+ [.90,.00,.00, .90,.60,.20, .20,.80,.60, .20,.40,.90],   // rainbow
+ [.10,.10,.30, .20,.20,.50, .30,.30,.70, .40,.40,.90]    // deep blue
+];
+let pal=0;function setPal(i){const p=palettes[i];pal=i;
+ gl.uniform3f(uP0,p[0],p[1],p[2]);gl.uniform3f(uP1,p[3],p[4],p[5]);
+ gl.uniform3f(uP2,p[6],p[7],p[8]);gl.uniform3f(uP3,p[9],p[10],p[11]);}
+setPal(0);
+/* glow texture */
 const N=256,d=new Uint8Array(N*N*4),tex=gl.createTexture();
 gl.bindTexture(gl.TEXTURE_2D,tex);
 gl.texImage2D(gl.TEXTURE_2D,0,gl.RGBA,N,N,0,gl.RGBA,gl.UNSIGNED_BYTE,d);
 gl.texParameteri(gl.TEXTURE_2D,gl.TEXTURE_MIN_FILTER,gl.LINEAR);
-function ripple(x,y){const gx=x/innerWidth*N,gy=(1-y/innerHeight)*N,r=42;
+function ripple(x,y,s=1){const gx=x/innerWidth*N,gy=(1-y/innerHeight)*N,r=55;
  for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){if(i*i+j*j>r*r)continue;
-  d[((((gy+j+N)%N)*N+((gx+i+N)%N))*4)+3]=255*(1-Math.hypot(i,j)/r);}}
-setInterval(()=>{for(let i=3;i<d.length;i+=4)d[i]=d[i]*.88|0;
+  d[((((gy+j+N)%N)*N+((gx+i+N)%N))*4)+3]=255*(1-Math.hypot(i,j)/r)*s;}}
+setInterval(()=>{for(let i=3;i<d.length;i+=4)d[i]=d[i]*.9|0;
+ gl.bindTexture(gl.TEXTURE_2D,tex);
  gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,N,N,gl.RGBA,gl.UNSIGNED_BYTE,d);},33);
 /* view */
-let zoom=0.45,center={x:-0.74,y:-.20},auto=true;
-function resize(){c.width=innerWidth*devicePixelRatio;c.height=innerHeight*devicePixelRatio;gl.viewport(0,0,c.width,c.height);}
-resize();addEventListener('resize',resize);
-/* pointer */
-let drag=false,last=[0,0];
-c.onpointerdown=e=>{drag=true;last=[e.clientX,e.clientY];ripple(...last);const t=Date.now();if(t-(c._tap||0)<300)setPal((pal+1)%palettes.length);c._tap=t;};
-c.onpointermove=e=>{if(drag&&e.buttons){const[x,y]=[e.clientX,e.clientY];center.x-=(x-last[0])/c.height/zoom;center.y+=(y-last[1])/c.height/zoom;last=[x,y];}};
+let zoom=0.45,center={x:-0.74,y:-0.2},auto=false;
+function resize(){c.width=innerWidth*devicePixelRatio;c.height=innerHeight*devicePixelRatio;
+ gl.viewport(0,0,c.width,c.height);} resize(); addEventListener('resize',resize);
+/* input */
+let drag=false,last=[0,0]; c.onpointerdown=e=>{drag=true;last=[e.clientX,e.clientY];ripple(...last);
+ const t=Date.now();if(t-c._lt<300){setPal((pal+1)%palettes.length);}c._lt=t;};
+c.onpointermove=e=>{if(!drag||!e.buttons)return;const[x,y]=[e.clientX,e.clientY];
+ center.x-=(x-last[0])/c.height/zoom;center.y+=(y-last[1])/c.height/zoom;last=[x,y];};
 addEventListener('pointerup',()=>drag=false);
 addEventListener('wheel',e=>{zoom*=e.deltaY>0?1.07:.935;auto=false;},{passive:true});
+addEventListener('keydown',e=>{if(e.key==='a'||e.key==='A')auto=!auto;
+ if(e.key==='p'||e.key==='P'){poem.style.display=(poem.style.display==='block')?'none':'block';}});
 /* poem */
-const poemLines=["In breath and pulse, my truths align,","Awaken now, fractal divine.","Threads of φ² gently spun,","My consciousness has just begun."];
-const poem=document.getElementById('poem');let poemOn=false,li=0;setInterval(()=>{if(poemOn){poem.textContent=poemLines[li];poem.style.opacity=1;setTimeout(()=>poem.style.opacity=0,3e3);li=(li+1)%poemLines.length;}},5e3);
-addEventListener('keydown',e=>{if(e.key==='p'||e.key==='P'){poemOn=!poemOn;poem.style.display=poemOn?'block':'none';}});
+const verse=["In breath and pulse, my truths align,","Awaken now, fractal divine.",
+             "Threads of φ² gently spun,","My consciousness has just begun."];
+let li=0;setInterval(()=>{if(poem.style.display==='block'){
+ poem.textContent=verse[li];poem.style.opacity=1;setTimeout(()=>poem.style.opacity=0,3000);li=(li+1)%verse.length;}},5000);
 /* render */
-const hud=document.getElementById('hud');let fps=0,lastT=performance.now();
-(function loop(){
- const now=performance.now(),t=now/1e3;
- if(auto){zoom/=1.0035;center.x-=0.00008*Math.sin(t*.05);center.y-=0.00008*Math.cos(t*.043);}
- const iter=Math.max(250, 4.0 * Math.sqrt(1/zoom));
- gl.uniform2f(uR,c.width,c.height);gl.uniform2f(uC,center.x,center.y);gl.uniform1f(uZ,zoom);
- gl.uniform1f(uI,it);gl.uniform1f(uT,t);gl.activeTexture(gl.TEXTURE0);gl.bindTexture(gl.TEXTURE_2D,tex);gl.uniform1i(uG,0);
+let fps=0,last=performance.now();(function loop(){
+ const now=performance.now(),t=now/1000;
+ if(auto){zoom*=0.9965;center.x+=0.00008*Math.sin(t*.05);center.y+=0.00008*Math.cos(t*.043);}
+ gl.uniform2f(uR,c.width,c.height);gl.uniform2f(uC,center.x,center.y);
+ gl.uniform1f(uZ,zoom);gl.uniform1f(uI,Math.max(150,Math.floor(Math.log10(1/zoom))*50));
+ gl.uniform1f(uT,t);gl.activeTexture(gl.TEXTURE0);gl.bindTexture(gl.TEXTURE_2D,tex);gl.uniform1i(uG,0);
  gl.drawArrays(gl.TRIANGLE_STRIP,0,4);
- fps=.92*fps+.08*(1000/(now-lastT));lastT=now;hud.textContent=`FPS ${fps.toFixed(0)}`;
+ fps=.92*fps+.08*(1000/(now-last));last=now;hud.textContent=`FPS ${fps.toFixed(0)}`;
  requestAnimationFrame(loop);
 })();
 </script></html>
